# bookkeeper

./: .env  .gitignore  accounts.db  bookkeeper.db  package-mgmt.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  devcontainer.md
data/: coav2.csv
src/: abc.py  agent_graph.py  api.py  bookkeeper.db  client_landingai.py  config.py  database.py  db_setup.py  invoices.py  main.py  models.py  orm_models.py  query.py  setup.py
src/bookkeeper/: agent_graph.py  client_landingai.py  database.py  invoices.py  main.py  models.py  query.py  setup.py
tests/: conftest.py  test_database_ops.py  test_query.py
